Document the warning about peers of incompatible releases